[gd_scene load_steps=5 format=3 uid="uid://i2xgpu2dm8c4"]

[ext_resource type="Script" path="res://scripts/map_generator.gd" id="1_ep5ns"]
[ext_resource type="Script" path="res://scripts/map.gd" id="1_uqqlg"]

[sub_resource type="Gradient" id="Gradient_q325i"]
colors = PackedColorArray(0, 0, 0, 1, 0.336608, 0.336608, 0.336608, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_clvtv"]
gradient = SubResource("Gradient_q325i")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="map" type="Node2D"]
script = ExtResource("1_uqqlg")

[node name="visuals" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="lines" type="Node2D" parent="visuals"]
unique_name_in_owner = true

[node name="rooms" type="Node2D" parent="visuals"]
unique_name_in_owner = true

[node name="mapGenerator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_ep5ns")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
offset = Vector2(960, 540)

[node name="mapBackground" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -1

[node name="MarginContainer" type="MarginContainer" parent="mapBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="background" type="TextureRect" parent="mapBackground/MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_clvtv")
